--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -1,6 +1,21 @@
-<h1>Editing Todo</h1>
+<p id="notice"><%= notice %></p>
+<div class="container-fluid">
+    <div class="row">
+        <%= render :partial => "layouts/header"  %>
+    </div>
 
-<%= render 'form', todo: @todo %>
+    <div class="row">
+        <strong><p class="h1">Todo編集</p></strong>
+    </div>
 
-<%= link_to 'Show', @todo %> |
-<%= link_to 'Back', todos_path %>
+    <div class="col-xs-12 col-md-9">
+        <%= render 'form', todo: @todo %>
+    </div>
+
+    <div class="row">
+        <%= link_to  todos_path, class: 'btn btn-default' do %>
+            <i class="fa fa-arrow-left"></i>
+            <span>戻る</span>
+        <% end %>
+    </div>
+</div>
